# template-fastapi

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/application/core/: config.py  logging.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/presentation/views/: test_health.py
