[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
httpx = "^0.24.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --color=yes"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.coverage.run]
concurrency = ["greenlet"]
